# tolteca

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yml  .travis.yml  404.html  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  conf.py  data_lmt  genindex.html  index.html  index.rst  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.py
.github/workflows/: python-app.yml  python-publish.yml
_build/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
_modules/: cached_property.html  contextlib.html  index.html  logging.html
_modules/astroplan/: observer.html
_modules/gwcs/: coordinate_frames.html
_modules/tolteca/: cli.html  db.html  fs.html  gui.html  kidsdata.html  pipeline.html  reduce.html  simu.html  utils.html  web.html
_sources/: index.rst.txt
_sources/api/: tolteca.cli.CliRuntime.rst.txt  tolteca.cli.OnExitHandler.rst.txt  tolteca.cli.cli_header.rst.txt  tolteca.cli.main.rst.txt  tolteca.cli.process_callbacks.rst.txt  tolteca.datamodels.io.KidsModelParamsIO.rst.txt  tolteca.datamodels.io.NcFileIO.rst.txt  tolteca.datamodels.io.open_file.rst.txt  tolteca.datamodels.toltec.BasicObsData.rst.txt  tolteca.datamodels.toltec.BasicObsDataset.rst.txt  tolteca.datamodels.toltec.ToltecDataProd.rst.txt  tolteca.db.ConfigValidator.rst.txt  tolteca.fs.Accessor.rst.txt  tolteca.fs.DataFileStore.rst.txt  tolteca.fs.RemoteDataFileStore.rst.txt  tolteca.fs.SSHAccessor.rst.txt  tolteca.gui.AnimatedItemDelegate.rst.txt  tolteca.gui.DBStatusPanel.rst.txt  tolteca.gui.DataFileGroupModel.rst.txt  tolteca.gui.DataFileGroupModelFilter.rst.txt  tolteca.gui.DataFileInfoModel.rst.txt  tolteca.gui.DataFilesView.rst.txt  tolteca.gui.Gui.rst.txt  tolteca.gui.GuiRuntime.rst.txt  tolteca.gui.ToltecaGui.rst.txt  tolteca.gui.main.rst.txt  tolteca.io.NcFileIO.rst.txt  tolteca.io.open.rst.txt  tolteca.kidsdata.SolvedTimeStream.rst.txt  tolteca.kidsdata.TargetSweep.rst.txt  tolteca.kidsdata.VnaSweep.rst.txt  tolteca.kidsutils.kidsdata.RawTimeStream.rst.txt  tolteca.kidsutils.kidsdata.SolvedTimeStream.rst.txt  tolteca.kidsutils.kidsdata.Sweep.rst.txt  tolteca.kidsutils.kidsdata.SweepMixin.rst.txt  tolteca.kidsutils.kidsdata.TargetSweep.rst.txt  tolteca.kidsutils.kidsdata.TimeStream.rst.txt  tolteca.kidsutils.kidsdata.VnaSweep.rst.txt  tolteca.kidsutils.kidsmodel.InstrumentalDetune.rst.txt  tolteca.kidsutils.kidsmodel.KidsProbeGainWithGeometry.rst.txt  (+117 more)
_sources/tolteca/: index.rst.txt  tolteca_recipes.rst.txt  tolteca_workflow.rst.txt
_static/: documentation_options.js
api/: tolteca.cli.CliRuntime.html  tolteca.cli.OnExitHandler.html  tolteca.cli.cli_header.html  tolteca.cli.main.html  tolteca.cli.process_callbacks.html  tolteca.datamodels.io.KidsModelParamsIO.html  tolteca.datamodels.io.NcFileIO.html  tolteca.datamodels.io.open_file.html  tolteca.datamodels.toltec.BasicObsData.html  tolteca.datamodels.toltec.BasicObsDataset.html  tolteca.datamodels.toltec.ToltecDataProd.html  tolteca.db.ConfigMixin.html  tolteca.db.ConfigMixin.rst  tolteca.db.ConfigValidator.html  tolteca.db.DatabaseConnection.html  tolteca.db.DatabaseConnection.rst  tolteca.db.DatabaseRuntime.html  tolteca.db.DatabaseRuntime.rst  tolteca.db.get_databases.html  tolteca.fs.Accessor.html  tolteca.fs.DataFileStore.html  tolteca.fs.RemoteDataFileStore.html  tolteca.fs.SSHAccessor.html  tolteca.gui.AnimatedItemDelegate.html  tolteca.gui.DBStatusPanel.html  tolteca.gui.DataFileGroupModel.html  tolteca.gui.DataFileGroupModelFilter.html  tolteca.gui.DataFileInfoModel.html  tolteca.gui.DataFilesView.html  tolteca.gui.Gui.html  tolteca.gui.GuiRuntime.html  tolteca.gui.ToltecaGui.html  tolteca.gui.main.html  tolteca.io.NcFileIO.html  tolteca.io.open.html  tolteca.kidsdata.RawTimeStream.html  tolteca.kidsdata.RawTimeStream.rst  tolteca.kidsdata.SolvedTimeStream.html  tolteca.kidsdata.Sweep.html  tolteca.kidsdata.Sweep.rst  (+139 more)
data/config/: tolteca.yaml
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst
docs/kidsproc/: index.rst
docs/tolteca/: index.rst  recipes.rst  toltec_simu_tutorial.md  tolteca_recipes.rst  tolteca_workflow.rst  web.rst
kidsproc/: __init__.py  cli.py  gui.py
kidsproc/clicmd/: core.py  ipy.py
kidsproc/common/: __init__.py
kidsproc/data/: debug.sqlite  test_sqlalchemy.py
kidsproc/db/: DatabaseConnection.py  __init__.py
kidsproc/example_subpkg/: setup_package.py
kidsproc/fs/: datafilestore.py  toltec.py
kidsproc/gui/: dbstatus.ui
kidsproc/io/: __init__.py  registry.py
kidsproc/kidsdata/: __init__.py  bak.py
kidsproc/services/: roach_manager.py
kidsproc/utils/: __init__.py  cli.py  cli0.py  fmt.py  gui.py  log.py  nc.py
licenses/: LICENSE.rst
src/tolteca_config/: __init__.py  core.py  utils.py
src/tolteca_datamodels/: __init__.py  base.py  data_prod.py  fileio.py  filestore.py  types.py
src/tolteca_kids/: __init__.py  core.py  dataprod_output.py  filestore.py  kids_find.py  match1d.py  mpl.py  output.py  peaks1d.py  pipeline.py  plot.py  roach_tone.py  roach_tone_power.py  sweep_check.py  sweep_fitter.py  tlaloc_output.py  tone_finder.py  utils.py
src/tolteca_simu/: __init__.py
tests/: __init__.py
tests/config/: __init__.py  test_cli.py  test_runtime_context.py
tests/datamodels/: data_lmt  test_db.py  test_file.py  test_fileio.py  test_filestore.py  test_ncfile.py  test_table.py  test_tel_ncfile.py  test_toltecdata.py
tests/kids/: __init__.py  test_kids.py  test_pipeline.py  test_roach_tone.py
tests/kidsproc/: __init__.py  test_kidsdata.py
tolteca/: __init__.py  cli.py  gui.py  index.html  recipes.html  tolteca_recipes.html  tolteca_workflow.html  web.html
tolteca/cal/: __init__.py  base.py
tolteca/cli/: __init__.py  check.py  core.py  db.py  dot.py  dp.py  ipy.py  reduce.py  run.py  setup.py  simu.py  simu0.py  simu2.py  utils.py  web.py
tolteca/clicmd/: __init__.py  setup.py  workon.py
tolteca/common/: __init__.py
tolteca/config/: base.py  core.py  core0.py  runtime_context.py
tolteca/data/: debug.sqlite  ocs3_api.yaml  (+2 more)
(+559 files in other folders)
