
[project.urls]
homepage = "https://github.com/toltec-astro/tolteca"
documentation = "https://tolteca.readthedocs.io/"
repository = "https://github.com/toltec-astro/tolteca"
changelog = "https://github.com/toltec-astro/tolteca/blob/main/CHANGELOG.md"

[project]
name="tolteca"
description = "A package for analyzing TolTEC data."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = {file = "LICENSE"}
keywords = ["tolteca"]
authors = [
  {name="Zhiyuan Ma", email="zhiyuanma@umass.edu"},
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'Natural Language :: English',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]

dependencies = [
    "scipy"
]

[project.scripts]

[tool.setuptools.package-data]
"*" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*",
    "data/*/*/*/*/*",
    "data/*/*/*/*/*/*"
]

[build-system]
requires = ["setuptools",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "src/tolteca_config/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tolteca_*"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest",
    "isort",
    "black",
    "ruff",
    "pre-commit",
    "sphinx",
    "myst_parser",
    "sphinx-book-theme",
    "sphinx-automodapi",
]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"

[tool.black]
line-length = 88
force-exclude = '''
^/(
  (
    examples
    |
    docs
    |
    data
    |
    src/tolteca_config/_version.py
  )
)
'''

[tool.isort]
profile = "black"
extend_skip_glob = [
    "docs/*",
    "src/tolteca_config/_version.py"
]
group_by_package = true

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["ALL"]
exclude=[
    "docs/*",
    "src/tolteca_config/_version.py"
]

[tool.ruff.pydocstyle]
convention = "numpy"
